// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/qti-components/qti-response-processing/qti-expression/qti-printed-variable Multiple play-test 1`] = `
<div id="root-inner">
  <qti-assessment-item data-testid="qti-assessment-item">
    <qti-outcome-declaration base-type="string"
                             cardinality="multiple"
                             identifier="OUTCOME"
    >
      <qti-default-value>
        <qti-value>
          MULTIPLE
        </qti-value>
      </qti-default-value>
    </qti-outcome-declaration>
    <qti-item-body>
      <qti-printed-variable identifier="OUTCOME">
      </qti-printed-variable>
    </qti-item-body>
    <qti-response-processing>
      <qti-set-outcome-value identifier="OUTCOME">
        <qti-base-value base-type="identifier">
          UITSTOOT
        </qti-base-value>
      </qti-set-outcome-value>
    </qti-response-processing>
  </qti-assessment-item>
</div>
`;

exports[`lib/qti-components/qti-response-processing/qti-expression/qti-printed-variable Multiple play-test 2`] = `
<div id="root-inner">
  <qti-assessment-item data-testid="qti-assessment-item">
    <qti-outcome-declaration base-type="string"
                             cardinality="multiple"
                             identifier="OUTCOME"
    >
      <qti-default-value>
        <qti-value>
          MULTIPLE
        </qti-value>
      </qti-default-value>
    </qti-outcome-declaration>
    <qti-item-body>
      <qti-printed-variable identifier="OUTCOME">
      </qti-printed-variable>
    </qti-item-body>
    <qti-response-processing>
      <qti-set-outcome-value identifier="OUTCOME">
        <qti-base-value base-type="identifier">
          UITSTOOT
        </qti-base-value>
      </qti-set-outcome-value>
    </qti-response-processing>
  </qti-assessment-item>
</div>
`;

exports[`lib/qti-components/qti-response-processing/qti-expression/qti-printed-variable Single play-test 1`] = `
<div id="root-inner">
  <qti-assessment-item data-testid="qti-assessment-item">
    <qti-outcome-declaration base-type="string"
                             cardinality="single"
                             identifier="OUTCOME"
    >
      <qti-default-value>
        <qti-value>
          SINGLE
        </qti-value>
      </qti-default-value>
    </qti-outcome-declaration>
    <qti-item-body>
      <qti-printed-variable identifier="OUTCOME">
      </qti-printed-variable>
    </qti-item-body>
    <qti-response-processing>
      <qti-set-outcome-value identifier="OUTCOME">
        <qti-base-value base-type="identifier">
          UITSTOOT
        </qti-base-value>
      </qti-set-outcome-value>
    </qti-response-processing>
  </qti-assessment-item>
</div>
`;
